# slam-quater_ikf

./: CMakeLists.txt  manifest.xml
src/: AdaptiveAttitudeCov.hpp  CMakeLists.txt  Ikf.cpp  Ikf.hpp  ikf.cpp  ikf.cpp~  ikf.h  ikf.h~  main.cpp  main.cpp~  quater_ikf.pc.in
test/: CMakeLists.txt  IkfTest.cpp
